# TinyOpenglEngine

./: .gitmodules  CMakeLists.txt
src/engine/: CMakeLists.txt  main.cpp
